windows-x86/c/lib/relay_leaf.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/netproxyvn/relay-leaf/clib */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "capi.go"

#include <stdlib.h>
#include <stdint.h>
#include <stdbool.h>

// Statistics structure returned by relay_leaf_get_stats
// Fields ordered to minimize padding
typedef struct {
    int64_t uptime_seconds;      // Connection uptime in seconds
    int64_t total_streams;       // Total streams processed
    int64_t bytes_sent;          // Total bytes sent
    int64_t bytes_received;      // Total bytes received
    int64_t reconnect_count;     // Number of reconnection attempts
    char* last_error;            // Last error message (caller must free with relay_leaf_free_string)
    char* exit_points_json;      // JSON array of exit points (caller must free with relay_leaf_free_string)
    char* node_addresses_json;   // JSON array of connected node IPs (caller must free with relay_leaf_free_string)
    int32_t active_streams;      // Number of active streams
    int32_t connected_nodes;     // Number of connected relay nodes
    bool connected;              // Whether connected to any relay node
} RelayLeafStats;

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt32 GoInt;
typedef GoUint32 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_32_bit_pointer_matching_GoInt[sizeof(void*)==32/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif


// relay_leaf_create creates a new relay leaf client instance.
// Configuration is done via setter functions called before relay_leaf_start.
//
extern __declspec(dllexport) int32_t relay_leaf_create(_Bool verbose, uintptr_t* out_handle);

// relay_leaf_set_discovery_url sets the discovery API URL.
// Must be called before relay_leaf_start.
// If not called, uses default: https://api.prx.network/public/relay/nodes
//
extern __declspec(dllexport) int32_t relay_leaf_set_discovery_url(uintptr_t handle, char* url);

// relay_leaf_set_partner_id sets the partner ID.
// Must be called before relay_leaf_start.
// This is optional and will be included in ClientRegister if provided.
//
extern __declspec(dllexport) int32_t relay_leaf_set_partner_id(uintptr_t handle, char* partner_id);

// relay_leaf_add_proxy adds a proxy URL to the configuration.
// Must be called before relay_leaf_start.
// Can be called multiple times to add multiple proxies.
// Proxy URL format: scheme://[user:pass@]host:port
// Supported schemes: http, socks5
//
extern __declspec(dllexport) int32_t relay_leaf_add_proxy(uintptr_t handle, char* proxy_url);

// relay_leaf_start starts the relay client (non-blocking).
// The client will run in the background until stopped.
//
extern __declspec(dllexport) int32_t relay_leaf_start(uintptr_t handle);

// relay_leaf_stop stops the relay client gracefully.
// Blocks until the client has stopped (with 30s timeout).
//
extern __declspec(dllexport) int32_t relay_leaf_stop(uintptr_t handle);

// relay_leaf_destroy destroys the client and releases all resources.
// Automatically stops the client if still running.
// The handle becomes invalid after this call.
//
extern __declspec(dllexport) int32_t relay_leaf_destroy(uintptr_t handle);

// relay_leaf_get_device_id gets the auto-generated device identifier.
// Available immediately after relay_leaf_create().
// Returns a string that must be freed with relay_leaf_free_string().
//
extern __declspec(dllexport) char* relay_leaf_get_device_id(uintptr_t handle);

// relay_leaf_get_stats gets current client statistics.
// The caller MUST call relay_leaf_free_stats() when done with the stats
// to free allocated strings (last_error, exit_points_json, node_addresses_json).
//
extern __declspec(dllexport) int32_t relay_leaf_get_stats(uintptr_t handle, RelayLeafStats* out_stats);

// relay_leaf_free_stats frees strings allocated in RelayLeafStats.
//
extern __declspec(dllexport) void relay_leaf_free_stats(RelayLeafStats* stats);

// relay_leaf_free_string frees a string allocated by the library.
//
extern __declspec(dllexport) void relay_leaf_free_string(char* s);

// relay_leaf_version gets the library version string.
// Returns a string that must be freed with relay_leaf_free_string.
//
extern __declspec(dllexport) char* relay_leaf_version();

// relay_leaf_error_message gets the error message for an error code.
// Returns a string that must be freed with relay_leaf_free_string.
//
extern __declspec(dllexport) char* relay_leaf_error_message(int32_t code);

#ifdef __cplusplus
}
#endif